# pdf-editor-by-claude-ai

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md  progress.md
.github/: ISSUE_TEMPLATE.md
.github/workflows/: cross-build.yml  windows-build-on-release.yml
cmake/: FindMuPDF.cmake  FindTesseract.cmake
docs/: architecture.md  building-mupdf-windows.md
scripts/: README.md  build_mupdf_windows.ps1
src/cli/: CMakeLists.txt  commands.cpp  commands.h  main.cpp
src/core/: CMakeLists.txt
src/core/include/pdfeditor/: annotations.h  bookmarks.h  core.h  document.h  editor.h  forms.h  metadata.h  ocr.h  optimizer.h  renderer.h  security.h  signing.h
src/core/src/: annotations.cpp  bookmarks.cpp  document.cpp  editor.cpp  forms.cpp  metadata.cpp  renderer.cpp
src/gui/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  pdfviewer.cpp  pdfviewer.h
tests/: CMakeLists.txt  test_helpers.h
tests/unit/: test_bookmarks.cpp  test_document.cpp
